# lgwa-response

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/examples/: README.md  antenna_pattern_mollview.py  bilby_inference.py  center_at_earth_position.py  resampling_efficiency.py  save_ephemeris_data.py
src/lgwa_response/: __init__.py  add_relbin_samples.py  bilby_interface.py  lgwa_settings.py  likelihood.py  lunar_coordinates.py  simple_waveforms.py
src/lgwa_response/data/: LGWA_Nb_psd.txt  LGWA_Si_psd.txt  LGWA_Soundcheck_psd.txt  data_position.npy  data_response.npy  lgwa_metadata.yaml  times_position.npy  times_response.npy
src/tests/: test_data_finding.py  test_likelihood.py  test_phase_marginalization.py  test_projections.py
